Intentando mejorar colores

--- a/scss/partials/_titulos.scss
+++ b/scss/partials/_titulos.scss
@@ -1,7 +1,7 @@
 .Titulo1{
     font-family: $titulo;
     font-style: $cursiva;
-    background-color: $fondo-principal;
+    // background-color: $fondo-principal;
     color: $color-de-fuente;
 }
 .Titulo-destacadas{
