Corrigiendo nav-bar

--- a/scss/partials/_titulos.scss
+++ b/scss/partials/_titulos.scss
@@ -1,7 +1,8 @@
 .Titulo1{
     font-family: $titulo;
     font-style: $cursiva;
-    // background-color: $fondo-principal;
+    background-color: $fondo-principal;
+    // background-image: linear-gradient(to left, #e7aaab, #5e6296);    
     color: $color-de-fuente;
 }
 .Titulo-destacadas{
